set(DEMO_DIR ${CMAKE_CURRENT_LIST_DIR})
function(gksDemo name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} PUBLIC xgks)
    target_include_directories(${name} PUBLIC ${DEMO_DIR})
endfunction()

gksDemo(bsort)
# gksDemo(clock)
gksDemo(defcolors)
gksDemo(font)
gksDemo(hanoi)
gksDemo(mi)
gksDemo(pline)
# gksDemo(pmark)
# gksDemo(usa)
# gksDemo(wong)

# add_subdirectory(example)
# add_subdirectory(Logo)
# add_subdirectory(sledsrc)
# add_subdirectory(stratego)
